--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&family=Open+Sans:wght@300;400;500;600;700&family=Source+Serif+Pro:wght@400;600&family=Fira+Mono&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
